--- a/playbook/templates/kib.sh.j2
+++ b/playbook/templates/kib.sh.j2
@@ -1,4 +1,5 @@
+# Warning: This file is Ansible Managed, manual changes will be overwritten on next playbook run.
 #!/usr/bin/env bash
 
-export KIBANA_HOME={{ kibana_home }}
-export PATH=$PATH:$KIBANA_HOME/bin
+export KB_HOME={{ kibana_home }}
+export PATH=$PATH:$KB_HOME/bin
